--- a/sigmaCabs/app/views/bookings/customerFeedback.html
+++ b/sigmaCabs/app/views/bookings/customerFeedback.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="modal-body" > 
-            <fieldset class="left">
+            <fieldset>
                 <legend class="searchbox-border">Customer Request</legend>
 
                 <div class="customer-booking-tabs">
