--- a/sigmaCabs/app/views/bookings/customerRequestMain.html
+++ b/sigmaCabs/app/views/bookings/customerRequestMain.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="modal-body">
-            <fieldset class="left">
+            <fieldset>
                 <legend class="searchbox-border">Caller Request</legend>
 
                 <div class="fieldContainer  relative">
@@ -98,8 +98,6 @@
                             <label class="labelCompact">Comment</label>
                             <textarea data-ng-model="corporateRequestDetails.comments" class="cancelBookingComment" style="width:289px;"></textarea>
                         </div>
-
-
                         <p class="clear"/>
                     </div>
 
