--- a/sigmaCabs/app/views/dispatch.html
+++ b/sigmaCabs/app/views/dispatch.html
@@ -39,7 +39,7 @@
         </div>
         <div class="fieldContainer left marginRightLeft5 bookingInput">
             <label class="labelCompact" title="Vehicle Start Kms.">Start Kms.</label>
-            <span class="bokingLabel">{{vStartKms}}</span>
+            <span class="bokingLabel">{{vehicleMainDetails.startKms}}</span>
         </div>
         <div class="callTransfer left marginRightLeft5">
 	        <label class="labelCompact">Call Transfer </label>
