--- a/sigmaCabs/app/views/dispatches/dispatcherMainView.html
+++ b/sigmaCabs/app/views/dispatches/dispatcherMainView.html
@@ -10,5 +10,5 @@
 	    <p class="clear"/>
 	</div>
 	<div data-ng-include="currentMonthData" style="clear:both;"></div>
-	<div data-ng-include="lastMonthHistory" class="left" style="margin: 5px 5px 0 0;width:100%;"></div>
+	<div data-ng-include="lastMonthHistory" style="margin: 5px 5px 0 0;width:100%;"></div>
 </div>
