--- a/sigmaCabs/app/views/dispatches/vehicleBookingCancel.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingCancel.html
@@ -40,7 +40,8 @@
 
         </div>
         <div class="modal-footer">
-            <button type="button" style="margin: 0px;" class="btn-danger btnCompact" ng-click="fnSaveAndClose()">Confirm & Close</button>
+            <button type="button" style="margin: 0px;" class="btn-danger btnCompact" ng-click="fnSaveAndClose()">Confirm</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()">Cancel</button>
         </div>
     </div>
 </div>
