--- a/sigmaCabs/app/views/dispatches/vehicleBookingComplaint.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingComplaint.html
@@ -37,7 +37,8 @@
             <p class="clear"/>
         </div>
         <div class="modal-footer">
-            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndClose()" >Save & Close</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndClose()" >Save</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()">Cancel</button>
         </div>
     </div>
 </div>
