--- a/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleVacantForm.html
@@ -52,7 +52,7 @@
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
         <div ng-switch on="vehicleMainDetails.vehicleState">
-            <button class="btnCompact btn-success" ng-switch-when="2" data-ng-click="fnVehicleAccepBooking()">Accepted</button>
+            <button class="btnCompact btn-success" ng-switch-when="2" data-ng-click="fnVehicleAcceptBooking()">Accepted</button>
             <button class="btnCompact btn-danger" ng-switch-when="2" data-ng-click="fnVehicleRejectBooking()">Rejected</button>
         </div>
         <!-- <div>
