--- a/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
+++ b/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
@@ -20,17 +20,26 @@
 
                 <div class="fieldContainer  relative">
                     <label class="labelCompact">New Phone No.</label>
-                    <input type="text" ng-model="newMobile" maxlength="15" class=" textFieldCompact" phone/>
+                    <input type="text" ng-model="changePhone.newMobile" maxlength="15" class=" textFieldCompact" phone/>
+                </div>
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">Category By</label>
+                     <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changePhone.categoryId" data-ng-options="obj.id as obj.categoryName for obj in vehicleCategoryTypes"></select>
+                </div>
+                <div class="fieldContainer relative">
+                    <label class="labelCompact">Reason</label><!--  ng-model="" -->
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="changePhone.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleChangePhoneReasonTypes"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
-                    <textarea data-ng-model="phoneChangeComments" class="cancelBookingComment"></textarea>
+                    <textarea data-ng-model="changePhone.phoneChangeComments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
             <p class="clear"/>
         </div>
         <div class="modal-footer">
-            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndClose()">Save & Close</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="fnSaveAndClose()">Save</button>
+            <button type="button" style="margin: 0px;" class="btn-success btnCompact" ng-click="close()">Cancel</button>
         </div>
     </div>
 </div>
