--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -47,18 +47,20 @@
                     <li><a href="javascript:void(0);" data-ng-click="fnOpenDisposition()" title="Open Disposition. For:- Enquiry, Follow-up, Rejection.">Disposition</a></li>
                     <li class="divider"></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehiclePhone()">Change Primary No.</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">Change Location.</a></li>
+                    <li ng-switch-when="2"><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">Change Location.</a></li>
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">Vehcile Status Change</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+                    <li ng-switch-when="4"><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+                    <li ng-switch-when="5"><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
+                    <li ng-switch-when="6"><a href="javascript:void(0);" data-ng-click="fnChangeVehicle()">Change Vehicle</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStart()" ng-switch-when="2">Break Start</a></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStop()" ng-switch-when="3">Break Stop</a></li>
+                    <li ng-switch-when="2"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStart()">Break Start</a></li>
+                    <li ng-switch-when="3"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakStop()">Break Stop</a></li>
                     <li ng-if="vehicleMainDetails.vehicleState != 1"><a href="javascript:void(0);" data-ng-click="fnVehicleLogout()">Logout</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:void(0);" data-ng-click="">Road Side Booking</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnRoadSideBooking()">Road Side Booking</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakdown()">Vehicle Breakdown</a></li>
+                    <li ng-if="vehicleMainDetails.vehicleState != 1"><a href="javascript:void(0);" data-ng-click="fnVehicleBreakdown()">Vehicle Breakdown</a></li>
                 </ul>
             </div>
         </div>
