--- a/sigmaCabs/app/views/dispatches/controlView.html
+++ b/sigmaCabs/app/views/dispatches/controlView.html
@@ -31,49 +31,68 @@
 				<div class="panel-body padding-5-panel-body">
 				  
 					<div>
-					  <div class="row margin-bottom5">
+						<div class="row margin-bottom5">
 							<div class="col-xs-5">
 								<label title="Attachment Type" >Atmt. Type</label>
 							</div>
 							<div class="col-xs-7">
-					  			<select class="selectFieldCompact" style="width:100%;"><option>Attachment Type1</option><option>Attachment Type1</option></select>
-					  		</div>
-					  </div>
-					  <div class="row margin-bottom5">
+									<select class="selectFieldCompact autoWidth"><option>Attachment Type1</option><option>Attachment Type1</option></select>
+								</div>
+						</div>
+						<div class="row margin-bottom5">
 							<div class="col-xs-5">
 								<label title="Vehicle Condition">Veh. Cond.</label>
 							</div>
 							<div class="col-xs-7">
-					  			<select style="width:100%;" class="selectFieldCompact"><option>Attachment Type1</option><option>Attachment Type1</option></select>
-					  		</div>
-					  </div>
-					  <div class="row margin-bottom5">
+									<select class="selectFieldCompact autoWidth"><option>Attachment Type1</option><option>Attachment Type1</option></select>
+								</div>
+						</div>
+						<div class="row margin-bottom5">
 							<div class="col-xs-5">
-								<label title="Projected Hours" >P.H.</label>
-								<select style="width: 42px;" class="selectFieldCompact" data-ng-model="bdSearch.projHrs" data-ng-options="obj.val as obj.txt for obj in projHrs"></select>
-							</div>
-							<div class="col-xs-7">
-								<label title="Collection" >Col.</label>
-								<select style="width: 70px;" class="selectFieldCompact" data-ng-model="bdSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
-							</div>
-					  </div>
-					  <div class=" margin-bottom5">
-					  	<button>Search</button>
-					  </div>
-					</div>
-					
-					<hr class="buttonSpliter" />
-
-					<div>
-						<div class="row">
-							<div class="col-xs-6">
 								<label title="Vehicle Type">V. Type</label>
-								<select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="bdSearch.vType" data-ng-options="obj.id as obj.vehicleType for obj in vTypes"></select>
+							</div>
+							<div class="col-xs-7">
+									<select class=" autoWidth selectFieldCompact" data-ng-model="bdSearch.vType" data-ng-options="obj.id as obj.vehicleType for obj in vTypes"></select>
+								</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Vehicle Name">V. Name</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="bdSearch.vName" data-ng-options="obj.id as obj.vehicleName for obj in vNames"></select>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-5">
+								<label title="Hours">Hours</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="bdSearch.nxtHrs" data-ng-options="obj.val as obj.txt for obj in nxtHrs"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-6">
+								<label title="Projected Hours" >P.H.</label>
+								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.projHrs" data-ng-options="obj.val as obj.txt for obj in projHrs"></select>
 							</div>
 							<div class="col-xs-6">
-								<label title="Hours">Hours</label>
-								<select style="width:90px;" class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="bdSearch.nxtHrs" data-ng-options="obj.val as obj.txt for obj in nxtHrs"></select>
+								<label title="Collection" >Col.</label>
+								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
 							</div>
+						</div>							
+						<div class="row margin-bottom5">
+							<div class="col-xs-6">
+								<label title="Vehicle Mode MOnth">MM.</label>
+								<select  style="width: 60px;" class=" selectFieldCompact" data-ng-model="bdSearch.vModMonth" data-ng-options="k as v for (k,v) in oMonths"></select>
+							</div>
+							<div class="col-xs-6">
+								<label title="Vehicle Mode Year">YY.&nbsp;</label>
+								<select  style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.vModYear" data-ng-options="obj.year as obj.year for obj in vModYear"></select>
+							</div>
+						</div>
+						<div class=" margin-bottom5" style="text-align: center;">
+							<button>Search</button>
 						</div>
 					</div>
 
@@ -82,35 +101,23 @@
 
 					<div>
 						<div class="row margin-bottom5">
-							<div class="col-xs-7">
-								<button class="btn btn-xs btn-success">Show All</button>								
-							</div>
-							<div class="col-xs-5">
-								<div  class="bookingCountInFilter">{{allCount}}</div>
+							<div class="col-xs-12">
+								<button class="autoWidth btn btn-xs btn-success">Show All ({{allCount}})</button>								
 							</div>
 						</div>
 						<div class="row margin-bottom5">
-							<div class="col-xs-7">
-								<button  class="btn btn-xs btn-danger" title="Yet to Dispatch">Yet to Dispatch</button>								
-							</div>
-							<div class="col-xs-5">
-								<div class="bookingCountInFilter">{{ytdCount}}</div>
+							<div class="col-xs-12">
+								<button  class="autoWidth btn btn-xs btn-danger" title="Yet to Dispatch">Yet to Dispatch ({{ytdCount}})</button>								
 							</div>
 						</div>
 						<div class="row margin-bottom5">
-							<div class="col-xs-7">
-								<button class="btn btn-xs btn-warning">Allotted</button>								
-							</div>
-							<div class="col-xs-5">
-								<div class="bookingCountInFilter">{{altCount}}</div>
+							<div class="col-xs-12">
+								<button class="autoWidth btn btn-xs btn-warning">Allotted ({{altCount}})</button>
 							</div>
 						</div>
 						<div class="row margin-bottom5">
-							<div class="col-xs-7">
-								<button class="btn btn-xs btn-success">Confirmed</button>								
-							</div>
-							<div class="col-xs-5">
-								<div class="bookingCountInFilter">{{cnfCount}}</div>
+							<div class="col-xs-12">
+								<button class="autoWidth btn btn-xs btn-success">Confirmed ({{cnfCount}})</button>		
 							</div>
 						</div>
 					</div>
@@ -124,7 +131,63 @@
 				  <span class="clearfix"></span>
 				</div>
 				<div class="panel-body padding-5-panel-body hide">
-				  The content is straight forward
+				  	<div>
+				  			<a >Company Vehicles</a><br/>
+				  			<a >Attached Vehicles</a><br/>
+				  			<a >Sublease Vehicles</a><br/>
+				  			<a >Promoting Partners</a><br/>
+				  	</div>
+				  	<hr class="buttonSpliter" />
+					<div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+								<label title="Vehicle Type">V. Type</label>
+							</div>
+							<div class="col-xs-7">
+									<select class=" autoWidth selectFieldCompact" data-ng-model="bdSearch.vType" data-ng-options="obj.id as obj.vehicleType for obj in vTypes"></select>
+								</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Vehicle Name">V. Name</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="bdSearch.vName" data-ng-options="obj.id as obj.vehicleName for obj in vNames"></select>
+							</div>
+						</div>	
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Vehicle Condition">Condition</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.vCondition" data-ng-options="obj.id as obj.vehicleName for obj in vConditions"></select>
+							</div>
+						</div>	
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Vehicle Condition">Status</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="viSearch.vStatus" data-ng-options="obj.id as obj.vehicleName for obj in vStatuses"></select>
+							</div>
+						</div>						
+						<div class="row margin-bottom5">
+							<div class="col-xs-6">
+								<label title="Projected Hours" >P.H.</label>
+								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.projHrs" data-ng-options="obj.val as obj.txt for obj in projHrs"></select>
+							</div>
+							<div class="col-xs-6">
+								<label title="Collection" >Col.</label>
+								<select style="width: 60px;" class="selectFieldCompact" data-ng-model="bdSearch.collection" data-ng-options="obj.val as obj.txt for obj in collections"></select>
+							</div>
+						</div>
+						<div class=" margin-bottom5" style="text-align: center;">
+							<button>Search</button>
+						</div>
+					</div>
+
+
+
 				</div>
 			</div>
 			<div class="panel panel-info" accordian-handler>
@@ -134,9 +197,153 @@
 				  <span class="clearfix"></span>
 				</div>
 				<div class="panel-body padding-5-panel-body hide">
-				  <input type="text" datepicker ng-model="bookingInfoDate" class="" placeholder=""/>
-				  <button class="btnCompact btn-success" data-ng-click="setBookingInfoGrid(false)" title="Update Booking Details">Update</button>
+				  	<div class="row margin-bottom5">
+						<div class="col-xs-5">
+							<label title="Date">Date</label>
+						</div>
+						<div class="col-xs-7">
+								<input type="text" datepicker ng-model="bookingInfoDate" class="textFieldCompact" placeholder=""/>
+							</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+							<label title="Vehicle Type">V. Type</label>
+						</div>
+						<div class="col-xs-7">
+								<select class=" autoWidth selectFieldCompact" data-ng-model="biSearch.vType" data-ng-options="obj.id as obj.vehicleType for obj in vTypes"></select>
+							</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Vehicle Name">V. Name</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="bdSearch.vName" data-ng-options="obj.id as obj.vehicleName for obj in vNames"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Journey">Journey</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.journey" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Vehicle Name">Sub.J. From</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.sjFrom" data-ng-options="obj.id as obj.vehicleName for obj in oJournies | filter:{parentId: biSearch.journey}"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Vehicle Name">Sub.J. To</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.sjTo" data-ng-options="obj.id as obj.vehicleName for obj in oJournies | filter:{parentId: biSearch.journey}"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Zone">Zone</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.zone" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Area">Area</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Search By">Search By</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oSearchBy"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Search By">Search Text</label>
+						</div>
+						<div class="col-xs-7">
+							<input type="text" class="autoWidth selectFieldCompact" data-ng-model="biSearch.searchByText" />
+						</div>
+					</div>
+
+					<div class=" margin-bottom5" style="text-align: center;">
+							<button class="" data-ng-click="setBookingInfoGrid(false)" title="Update Booking Details">Search</button>
+						</div>
+				  
 				</div>
+
+
+			</div>
+			<div class="panel panel-info" accordian-handler>
+				<div class="panel-heading short-panel-heading" ng-click="handleShortPanelClick('autoLog')">
+				  <span class="panel-title">Auto-Login Vehicles</span>
+				  <i class="glyphicon glyphicon-chevron-right"></i>
+				  <span class="clearfix"></span>
+				</div>
+
+				<div class="panel-body padding-5-panel-body hide">
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Zone">Zone</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.zone" data-ng-options="obj.id as obj.vehicleName for obj in oJournies"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+						<div class="col-xs-5">
+						<label title="Area">Area</label>
+						</div>
+						<div class="col-xs-7">
+							<select class="autoWidth selectFieldCompact" data-ng-model="biSearch.area" data-ng-options="obj.id as obj.vehicleName for obj in oAreas"></select>
+						</div>
+					</div>
+					<div class="row margin-bottom5">
+							<div class="col-xs-5">
+								<label title="Vehicle Type">V. Type</label>
+							</div>
+							<div class="col-xs-7">
+									<select class=" autoWidth selectFieldCompact" data-ng-model="bdSearch.vType" data-ng-options="obj.id as obj.vehicleType for obj in vTypes"></select>
+								</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="Vehicle Name">V. Name</label>
+							</div>
+							<div class="col-xs-7">
+								<select class="autoWidth selectFieldCompact" data-ng-model="bdSearch.vName" data-ng-options="obj.id as obj.vehicleName for obj in vNames"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="From Time">From Time</label>
+							</div>
+							<div class="col-xs-7">
+								<select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="alSearch.fromHour" ng-options='k as v for (k,v) in hours' data-ng-change="fnValidatePickupTime()" style="width:48px;"></select>
+							</div>
+						</div>
+						<div class="row margin-bottom5">
+							<div class="col-xs-5">
+							<label title="To Time">To Time</label>
+							</div>
+							<div class="col-xs-7">
+								<select class=" validate[maxSize[36]] selectFieldCompact" data-ng-model="alSearch.fromHour" ng-options='k as v for (k,v) in hours' data-ng-change="fnValidatePickupTime()" style="width:48px;"></select>
+							</div>
+						</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
@@ -165,6 +372,9 @@
 			  <span class="panel-title">Booking Info</span>
 			  <span class="glyphicon glyphicon-refresh" title="Refresh Booking Info" data-ng-click="setBookingInfoGrid(false)"></span>
 			  <input id="while_info_search" type="text" ng-model="bookingInfoFilterText" class="searchInput pull-right" placeholder="Search Bookings" ng-change="bookingInfoSearch()"/>
+			</div>
+			<div ng-show="showingAutoLoginVehicleGrid">
+			  <span class="panel-title">Auto-login Vehicles</span>
 			</div>
 		  <span class="clearfix"></span>
 		</div>
@@ -199,41 +409,41 @@
 						</div>
 				</div>
 				<div ng-switch-when="bInfo">						
-						<div ng-show="bookingInfoRecordSelected">
-							<div class="tabs">
-								<div class="tabHeader clearfix">
-							  	<div ng-repeat="tab in tabs_whileDriving" class="tabContainer left">
-							    	<div id="{{tab.splitTabId}}" ng-click="handleTabClick(tab.id, tabs_whileDriving)" class="tab" ng-class="{selected: tab.selected}" title="{{tab.tooltip}}">
-							    		<span class="tabLabel" data-ng-bind="tab.label"></span>
-							  		</div>
-									</div>
+					<div ng-show="bookingInfoRecordSelected">
+						<div class="tabs">
+							<div class="tabHeader clearfix">
+						  	<div ng-repeat="tab in tabs_whileDriving" class="tabContainer left">
+						    	<div id="{{tab.splitTabId}}" ng-click="handleTabClick(tab.id, tabs_whileDriving)" class="tab" ng-class="{selected: tab.selected}" title="{{tab.tooltip}}">
+						    		<span class="tabLabel" data-ng-bind="tab.label"></span>
+						  		</div>
 								</div>
 							</div>
-							<div ng-include src ="splitCurrentTab" class="fixed-view"> 
-							</div>
 						</div>
+						<div ng-include src ="splitCurrentTab" class="fixed-view"> 
+						</div>
+					</div>
 				</div>
 				<div ng-switch-default="" class="flex-height">
-						<div id="dispatcherVacantVehiclesGrid" class="gridStyle" ng-grid="gridForVacantVehiclesData" style="margin:0px;" ng-show="!bookingSelected"`> </div>
-						<div ng-show="bookingSelected">
-							<div style="width: 100%;padding-left: 20px;">
-								<div ng-repeat="vType in vTypes" class="left margin-right10">
-									<input type="checkbox" style="margin-right:2px;" ng-model="chbVtype[vType.id]" data-ng-change="fnVehicleTypeTicked()" /><span data-ng-bind="vType.vehicleType"></span>
-								</div>
-								<p class="clear"/>
+					<div id="dispatcherVacantVehiclesGrid" class="gridStyle" ng-grid="gridForVacantVehiclesData" style="margin:0px;" ng-show="!bookingSelected"`> </div>
+					<div ng-show="bookingSelected">
+						<div style="width: 100%;padding-left: 20px;">
+							<div ng-repeat="vType in vTypes" class="left margin-right10">
+								<input type="checkbox" style="margin-right:2px;" ng-model="chbVtype[vType.id]" data-ng-change="fnVehicleTypeTicked()" /><span data-ng-bind="vType.vehicleType"></span>
 							</div>
-							<div class="tabs">
-								<div class="tabHeader clearfix">
-							  	<div ng-repeat="tab in tabs" class="tabContainer left">
-							    	<div id="{{tab.splitTabId}}" ng-click="handleTabClick(tab.id, tabs)" class="tab" ng-class="{selected: tab.selected}" title="{{tab.tooltip}}">
-							    		<span class="tabLabel" data-ng-bind="tab.label"></span>
-							  		</div>
-									</div>
+							<p class="clear"/>
+						</div>
+						<div class="tabs">
+							<div class="tabHeader clearfix">
+						  	<div ng-repeat="tab in tabs" class="tabContainer left">
+						    	<div id="{{tab.splitTabId}}" ng-click="handleTabClick(tab.id, tabs)" class="tab" ng-class="{selected: tab.selected}" title="{{tab.tooltip}}">
+						    		<span class="tabLabel" data-ng-bind="tab.label"></span>
+						  		</div>
 								</div>
-							</div>
-							<div ng-include src ="splitCurrentTab"> 
 							</div>
 						</div>
+						<div ng-include src ="splitCurrentTab"> 
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>		
