Dispatch: Modal changes Integrations added

--- a/sigmaCabs/app/views/dispatches/currentMonthData.html
+++ b/sigmaCabs/app/views/dispatches/currentMonthData.html
@@ -6,7 +6,7 @@
         <span class="ellipsisText" title="{{currentDayStatistics.loginTime}}"><strong>{{currentDayStatistics.loginTime}}</strong></span>
 
         <span title="Expected Logout Time"><strong>ELoT:</strong></span>
-        <span class="ellipsisText" title="{{currentDayStatistics.loginTime}}"><strong>{{currentDayStatistics.loginTime}}</strong></span>
+        <span class="ellipsisText" title="{{currentDayStatistics.expectedLogoutTime}}"><strong>{{currentDayStatistics.expectedLogoutTime}}</strong></span>
 
         <span title="Previous Location"><strong>PL:</strong></span>
         <span class="ellipsisText" title="{{currentDayStatistics.prevousLocation}}"><strong>{{currentDayStatistics.prevousLocation}}</strong></span>
@@ -23,10 +23,10 @@
         <span class="ellipsisText"><strong>{{currentDayStatistics.totalBookings}}</strong></span>
 
         <span title="Successful Booking"><strong>SB:&nbsp;</strong></span>
-        <span class="ellipsisText"><strong>{{currentDayStatistics.completedBookings}}</strong></span>
+        <span class="ellipsisText"><strong>{{currentDayStatistics.successBookings}}</strong></span>
         
         <span title="Roadside Booking"><strong>Ro.B:&nbsp;</strong></span>
-        <span class="ellipsisText"><strong>{{currentDayStatistics.completedBookings}}</strong></span>
+        <span class="ellipsisText"><strong>{{currentDayStatistics.roadsideBookings}}</strong></span>
     
         <span title="Rejected Booking"><strong>RB:&nbsp;</strong></span>
         <span class="ellipsisText"><strong>{{currentDayStatistics.rejectedBookings}}</strong></span>
