--- a/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingClose.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="fieldContainer relative left">
                     <label class="labelCompact">Trip Time</label>
-                    <span>03:00:00</span>
+                    <span>{{bookingClose.tripTime}}</span>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left margin-right10">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="fieldContainer relative left">
                     <label class="labelCompact" title="Discount">Discount</label>
-                    <span>{{vehicleDetails.vehicleMainDetails.details.discount}}</span>
+                    <span>{{bookingClose.discount}}</span>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left margin-right10">
